--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     }
      compile 'io.reactivex:rxjava:1.0.14'
      compile 'io.reactivex:rxandroid:1.0.1'
+     compile 'com.j256.ormlite:ormlite-android:5.0'
 
     // Dependencies for local unit tests
     testCompile "junit:junit:$rootProject.ext.junitVersion"
